<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="ru.astralight.koksharov.robbernews.views.ArticleExpanded"
    tools:showIn="@layout/activity_article_expanded">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <TextView
            android:id="@+id/articleExpandTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_article_title_text" />

        <ImageView
            android:id="@+id/articleExpandImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@mipmap/ic_launcher" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/articleExpandTagsCloud"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TextView
            android:id="@+id/articleExpandPreview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Preview" />

        <ru.astralight.koksharov.robbernews.containers.HTML5WebView
            android:id="@+id/articleExpandedWebView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:text="@string/large_text" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="74dp">

        <ImageView
            android:id="@+id/articleExpandedLikeImage"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            app:srcCompat="@drawable/recommended32p"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

            <TextView
                android:id="@+id/articleExpandedLikesNumber"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_alignParentTop="true"
                android:layout_toEndOf="@+id/articleExpandedLikeImage"
                android:layout_toRightOf="@+id/articleExpandedLikeImage"
                android:text="0"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/articleExpandedAuthor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignTop="@+id/articleExpandedDateTime"
                android:text="@string/Author"
                android:layout_alignParentBottom="true" />

            <TextView
                android:id="@+id/articleExpandedPublished"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/articleExpandedLikeImage"
                android:layout_toEndOf="@+id/articleExpandedLikesNumber"
                android:text="@string/Published" />

            <TextView
                android:id="@+id/articleExpandedDateTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignTop="@+id/articleExpandedPublished"
                android:layout_toRightOf="@+id/articleExpandedPublished"
                android:text="@string/datetime" />
        </RelativeLayout>


    </LinearLayout>


</android.support.v4.widget.NestedScrollView>
