<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3b5ad3fc"
    tools:context="ru.astralight.koksharov.robbernews.FullscreenActivit">

    <!-- The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc. -->

    <!-- This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows. -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="31dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/linearLayout2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/viewButton"
                        style="@style/Widget.AppCompat.Button.Colored"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@android:color/holo_green_dark"
                        android:backgroundTint="@color/colorPrimary"
                        android:textAppearance="@style/TextAppearance.AppCompat"
                        android:elevation="0dp"
                        android:text="@string/DataView" />

                    <Button
                        android:id="@+id/FSDBFill"
                        style="@style/Widget.AppCompat.Button.Borderless.Colored"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:layout_weight="1"
                        android:background="@android:color/holo_green_dark"
                        android:backgroundTint="@color/colorPrimary"
                        android:text="@string/DBFill"
                        android:textAppearance="@style/TextAppearance.AppCompat" />

                    <Button
                        android:id="@+id/dummy_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_below="@+id/FSDBFill"
                        android:layout_weight="1"
                        android:backgroundTint="@color/colorPrimary"
                        android:text="@string/dummy_button" />

                </LinearLayout>

                <TextView
                    android:id="@+id/fullscreen_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:keepScreenOn="true"
                    android:text=""
                    android:textColor="#33b5e5"
                    android:textSize="10sp"
                    android:textStyle="bold" />

            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</RelativeLayout>
